# openvpn-gui

./: .gitignore  LICENSE  README.md  install.sh  main.py  openvpn-manager.desktop  pyproject.toml  uninstall.sh
.claude/: settings.json
openvpn_manager/: __init__.py  app.py  main_window.py  single_instance.py
openvpn_manager/backend/: __init__.py  credentials.py  privilege.py  profile_store.py  vpn_process.py
openvpn_manager/resources/: style.qss
openvpn_manager/testing/: __init__.py  http_harness.py
openvpn_manager/widgets/: admin_password_dialog.py  connection_panel.py  credentials_dialog.py  import_dialog.py  message_boxes.py  ovpn_drop.py  profile_list.py  theme.py
packaging/: com.openvpnmanager.policy  openvpn-manager-mime.xml  openvpn-manager-run
scripts/: bump_version.py  run-tests.sh
scripts/git-hooks/: pre-commit
tests/e2e/playwright/: package.json  playwright.config.ts
tests/e2e/playwright/specs/: harness.spec.ts
tests/unit/: conftest.py  test_privilege.py  test_profile_store.py  test_single_instance.py  test_vpn_process.py
