[project]
name = "openvpn-manager"
version = "0.1.2"
description = "Desktop OpenVPN connection manager for Fedora"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "keyring>=25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
openvpn-manager = "openvpn_manager.app:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openvpn_manager*"]

[tool.setuptools.package-data]
openvpn_manager = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]
